--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,160 @@
-.container{
+.container {
 
     display: grid;
-    grid-template-columns: 1fr, 4fr;
-    grid-template-rows: 1fr, 1fr, 1fr, 1fr, 1fr;
-    
+    grid-template-columns: 2fr, 4fr;
+    grid-template-rows: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr;
+
 }
 
-.header{
-    grid-column: 2/5;
-    display: grid;
-    grid-template-rows: 1fr, 1fr;
+.header {
+    grid-column:3/7;
+    display: flex;
+    flex-direction: column;
     padding-left: 30px;
     padding-right: 30px;
-
+    background-color: yellow;
 }
-.top-row{
+
+.top-row {
     grid-row: 1/2;
 }
-.top-row, .right-content, .bottom-row{
+
+.top-row,
+.right-content,
+.bottom-row {
     display: flex;
     justify-content: space-between;
 }
 
-.right-content{
+
+.right-content {
     gap: 20px;
     align-items: start;
 }
-#name{
+
+#name {
     font-weight: bolder;
 }
 
-img{
+img {
     width: 30px;
 }
-.image{
+
+.image {
     width: 50px;
 }
-.left-content{
+
+.left-content {
     display: flex;
     gap: 20px;
+    align-items: center;
 }
-.twitter.txt > #name {
+
+#name-large {
     font-size: larger;
+    font-weight: bold;
+
 }
+
+.bottom-row>.right-content {
+    align-items: center;
+
+}
+
+#hi {
+    font-weight: bold;
+}
+
+button {
+    background-color: rgb(0, 128, 255);
+    color: white;
+    border: none;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 5px;
+    border-radius: 8px;
+    width: 100px;
+}
+
+.sidebar {
+    grid-column: 1/3;
+    grid-row: 1/6;
+    background-color: rgb(0, 128, 255);
+    display: flex;
+    flex-direction: column;
+    padding-left: 30px;
+    padding-right: 30px;
+    gap: 70px;
+}
+
+.dashboard {
+    display: flex;
+    gap: 20px;
+    color: white;
+}
+
+.options {
+    display: flex;
+    gap: 20px;
+    color: white;
+}
+
+
+.main-content {
+    grid-column: 3/7;
+    grid-row: 2/6;
+    background-color: lightgray;
+    display: grid;
+    grid-template-columns: 1fr, 2fr;
+    padding-top: 30px;
+}
+.projects{
+    grid-column: 1/2;
+    padding-left: 30px;
+}
+#titles, .title{
+    font-weight: bold;
+    font-size: large;
+}
+.card-icons{
+    display: flex;
+    justify-content: flex-end;
+    
+}
+.article {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(250px, 1fr));
+    gap: 15px;
+    
+  }
+  
+  .article .card {
+    height: 150px;
+    background-color: yellow;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 25px;
+  }
+  .announcements{
+    grid-column: 2;
+    padding-left: 30px;
+
+  }
+  #titles{
+    padding-bottom: 10px;
+  }
+.maintenance-card{
+    background-color: yellow;
+    padding: 15px;
+    border-radius: 25px;
+    margin-bottom: 15px;
+   
+}
+
+.maintenance-card #option-text{
+    color: black;
+}
+
 
